--- a/portal/kafka-visualizer/src/app/app.component.html
+++ b/portal/kafka-visualizer/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Kokotina funguje</h1>
+  <h1>Kafka visualizer</h1>
 
   <div class="card">
     <div class="card-header">
